Fix button width causing border alignment issues.

--- a/service-front/web/src/stylesheets/_govuk-accordion.scss
+++ b/service-front/web/src/stylesheets/_govuk-accordion.scss
@@ -18,6 +18,5 @@
 
   &__section-button {
     word-wrap: break-word;
-    max-width: 500px;
   }
 }
